# js-file-editor

./: FakemonAdder.py  MoveAdder.py  pyproject.toml  test.json
adders/: AbilityAdder.py  FakemonAdder.py  MoveAdder.py
currentNum/: currentPokeNum.txt
